# barista-chatbot

./: .env.example  README.md  app.py  main.py  pyproject.toml
agent/: agent.py  prompt.txt
service/: barista.py
